--- a/sample/src/main/res/layout/main_tab.xml
+++ b/sample/src/main/res/layout/main_tab.xml
@@ -5,7 +5,7 @@
     android:animateLayoutChanges="true"
     android:id="@+id/main_content">
 
-    <com.github.sundeepk.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.github.genaku.compactcalendarview.CompactCalendarView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/compactcalendar_view"
         android:layout_width="fill_parent"
         android:layout_height="250dp"
