--- a/sample/src/main/res/layout/main_tab.xml
+++ b/sample/src/main/res/layout/main_tab.xml
@@ -12,7 +12,7 @@
         app:compactCalendarCurrentDayIndicatorStyle="no_fill_large_indicator"
         app:compactCalendarEventIndicatorStyle="small_indicator"
         app:compactCalendarOtherMonthDaysTextColor="#534c4c"
-        app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="true"
+        app:compactCalendarShouldSelectFirstDayOfMonthOnScroll="false"
         app:compactCalendarTargetHeight="250dp"
         app:compactCalendarTextSize="12sp" />
 
